<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TableLayout
            android:id="@+id/main_page_table_of_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            
            >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                 >

                <ImageButton
                    android:id="@+id/main_page_level1a_sel_item"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/main_page_level1a_sel_item" 
                    android:contentDescription="@string/content_desc_level1a"/>

                <ImageButton
                    android:id="@+id/main_page_level1b_sel_item"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/main_page_level1b_sel_item" 
                    android:contentDescription="@string/content_desc_level1b"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >

                <ImageButton
                    android:id="@+id/main_page_level2a_sel_item"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/main_page_level2a_sel_item" 
                    android:contentDescription="@string/content_desc_level2a"/>

                <ImageButton
                    android:id="@+id/main_page_level2b_sel_item"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/main_page_level2b_sel_item" 
                    android:contentDescription="@string/content_desc_level2b"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >

                <ImageButton
                    android:id="@+id/main_page_level3_sel_item"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/main_page_level3_sel_item"
                    android:contentDescription="@string/content_desc_level3" />
                <ImageButton
                    android:id="@+id/dummy"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:visibility="invisible"
                    android:background="@drawable/main_page_level3_sel_item" 
                    android:contentDescription="@string/content_desc_level3"/>
                
            </TableRow>
        </TableLayout>

</LinearLayout>