<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="8" >

    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        android:weightSum="12" >

        <ImageButton
            android:id="@+id/result_page_level_1_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="@drawable/bu_result_page_level_1" 
            android:contentDescription="@string/content_desc_level1"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5" />

        <ImageButton
            android:id="@+id/result_page_level_2_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="@drawable/bu_result_page_level_2" 
            android:contentDescription="@string/content_desc_level2"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5" />

        <ImageButton
            android:id="@+id/result_page_level_3_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="@drawable/bu_result_page_level_3" 
            android:contentDescription="@string/content_desc_level3"/>

        
    </LinearLayout>

</LinearLayout>