<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="51" >

    <!--
         <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3" />
    -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="@string/test_one_pic_weightsum_for_height" >

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="@string/test_one_pic_padding_height" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="@string/test_one_pic_content_height"
                android:orientation="horizontal"
                android:weightSum="@string/test_one_pic_weightsum_for_width" >

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="@string/test_one_pic_padding_width" />

                <ImageView
                    android:id="@+id/test_one_pic1"
                    android:layout_width="0dp"
                    android:scaleType="fitXY"
                    android:layout_height="match_parent"
                    android:layout_weight="@string/test_one_pic_content_width" />
                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="@string/test_one_pic_padding_width" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="10" >

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5.5" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:orientation="horizontal"
                android:weightSum="7" >

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2" />

                <ImageButton
                    android:id="@+id/test_one_next_btn1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:background="@android:color/transparent"
                    android:src="@drawable/test_page_next_btn" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/indicator_of_wrong_answer_of_test1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/box_level1_answer_f" />

        <ImageView
            android:id="@+id/indicator_of_right_answer_of_test1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/box_level1_answer_t" />

        <ImageView
            android:id="@+id/frame_of_pic_of_test1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/box_level1_answer_n" />
        <Button 
            android:id="@+id/test1_input_answer_btn_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            />
    </FrameLayout>

    <!--
         <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1" />
    -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="11" >

        <ImageButton
            android:id="@+id/stage_one_a_item_false_answer1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/bu_level1_f" />

        <ImageButton
            android:id="@+id/stage_one_a_item_true_answer1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/bu_level1_t" />

        <ImageButton
            android:id="@+id/stage_one_a_item_display_icon1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/bu_level1_n" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="10" >

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:orientation="horizontal"
                android:weightSum="10" >

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4.025" />

                <TextView
                    android:id="@+id/level1_test_text_show1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="跳" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</LinearLayout>