<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5.4" >

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:orientation="horizontal"
        android:weightSum="9" >

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.5" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:src="@drawable/bu_level_1" 
            android:contentDescription="@string/content_desc_level1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:orientation="horizontal"
        android:weightSum="9" >

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.5" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4" >

            <ImageView
                android:id="@+id/result1_table_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:scaleType="fitCenter" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.0"
        android:orientation="horizontal"
        android:weightSum="8.9" >

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.2" />

        <LinearLayout
            android:id="@+id/result_level1_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4.3"
            android:orientation="horizontal" >

            <!-- content is here -->

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:orientation="horizontal"
        android:weightSum="9" >

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5" />

        <ImageButton
            android:id="@+id/result_page_back_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:background="@drawable/result_page_back_btn" 
            android:contentDescription="@string/content_desc_back_btn"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25" />

        <ImageButton
            android:id="@+id/result_page_email_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:background="@drawable/result_page_email_btn" 
            android:contentDescription="@string/content_desc_email_btn"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25" />

        <ImageButton
            android:id="@+id/result_page_share_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:background="@drawable/result_page_share_btn" 
            android:contentDescription="@string/content_desc_share_btn"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5" />
    </LinearLayout>

</LinearLayout>